--- a/tracery-story.html
+++ b/tracery-story.html
@@ -2,13 +2,25 @@
 layout: tracery
 ---
 {
-	"origin": "Hello, #name#.",
+	"origin": "There was a(n) #adjective# girl named #name#.  She spent all of her time at the #noun#.  She would go there to #activity# after a long day of school. Usually, she was alone, but one day she saw someone new there.  They had #adjective2# hair and #adjective3# clothing, and they never moved. Everyday, there they were in the same place, and they were completely #adjective4#. 
+After #verb# for a few days, she finally went over to talk to the #adjective5# person. When she approached them, she said, “#greeting#!” There was no response, except a soft #action#. She repeated herself, confused by the lack of response. #ending #
+",
 	"name": [
-		"#adjective# #noun#",
-		"#adjective# #noun#",
-		"#adjective# #noun#",
-		"#adjective#, #adjective# #noun#"
+		"#Beatrice#",
+		"#Lily#",
+		"#Guinevere#",
+		"#Beth#"
 	],
-	"adjective": ["dear", "valued", "loyal", "weary"],
-	"noun": ["reader", "friend", "minion", "traveller"]
+	"adjective": ["simple", "curious", "lively", "gentle"],
+	"noun": ["library", "orchard", "park", "cafe", "lake"],
+        "activity": ["read", "draw", "relax", "study", "listen to music"],
+        "adjective2": ["long", "damaged", "frizzy", "glimmering"],
+        "adjective3": ["dirty", "frumpy", "dark", umkempt", "ill-fitting"], 
+        "adjective4": ["still", "frozen", "lifeless", "stiff"], 
+        "verb": ["watching", "observing", "considering", "noting"],
+        "adjective5": ["strange", "odd", "peculiar", mystifying", "intriguing"],
+        "greeting": ["Hi there! Are you lost?", "Hello, my name is #name#. What is your's?", "Hey, are you feeling okay? You don't look so good...", "Hello. I've seen you around here a lot lately."],
+        "action": ["grumbling", "grunt", "whisper", "hissing", "breathing"], 
+        "
+        
 }
